Migrate to NeoForge and update to Minecraft 1.21.1
Migrates the mod from Forge to NeoForge 1.21.1

Added new config menu in mods settings (NeoForge)
Added more customization for RPM and Stress settings in the mod.

Fixed issue #13
Fixed issue #16
Fixed issue #17